Use StandardCharsets (#12372)
Motivation:
We should use `StandardCharsets#UTF_8` instance instead of `"UTF-8"` Charset,

Modification:
Changed 'UTF-8' to 'StandardCharsets#UTF_8' Charset

Result:
Subtle Charset