@@ -40,6 +40,7 @@ import java.io.FileNotFoundException;
 import java.io.RandomAccessFile;
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.text.SimpleDateFormat;
 import java.util.Calendar;
 import java.util.Date;
@@ -207,7 +208,7 @@ public class Http2StaticFileServerHandler implements ChannelHandler {
 
     private static String sanitizeUri(String uri) throws UnsupportedEncodingException {
         // Decode the path.
-        uri = URLDecoder.decode(uri, "UTF-8");
+        uri = URLDecoder.decode(uri, StandardCharsets.UTF_8);
 
         if (uri.isEmpty() || uri.charAt(0) != '/') {
             return null;
